--- a/RainPredictionML.ipynb
+++ b/RainPredictionML.ipynb
@@ -1,18 +1,20 @@
 {
   "cells": [
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "CQAJIl3O3JMd"
       },
       "source": [
-        "# **[Python for Data Science] Final Project: Predict Next Day Rain in Australia**\n",
-        "# **Hacktiv8**\n",
+        "# **Final Project: Predict Next Day Rain in Australia**\n",
+        "# **Pacmann**\n",
         "\n",
         "## Aziz Fatih Fauzi"
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "oTZJhFxE3JMj"
@@ -23,6 +25,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "krUMAngH3JMk"
@@ -76,6 +79,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "QNaZq7pf3JM0"
@@ -132,6 +136,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "5JfNKbUg3JM3"
@@ -807,6 +812,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "ih6wMOeU3JM-"
@@ -1340,6 +1346,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "XgDq-gT_3JNC"
@@ -1349,6 +1356,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "V318HyEr3JNC"
@@ -1361,6 +1369,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "svcvAimu3JND"
@@ -1396,6 +1405,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "5peXyY953JND"
@@ -1405,6 +1415,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "Pbf3GLjc3JNE"
@@ -1463,6 +1474,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "g2s2Hpc63JNF"
@@ -1522,6 +1534,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "qxVqktCr3JNF"
@@ -1562,6 +1575,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "0rjo3mOS3JNG"
@@ -1586,6 +1600,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "yUMFL2_x3JNH"
@@ -1638,6 +1653,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "upuu9WDr3JNI"
@@ -1677,6 +1693,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "gLP1xjo73JNJ"
@@ -1686,6 +1703,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "SXev298w3JNJ"
@@ -1695,6 +1713,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "afmn9-TF3JNJ"
@@ -1763,6 +1782,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "_dzMF7263JNL"
@@ -1835,6 +1855,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "9p3ekNZ63JNM"
@@ -1879,6 +1900,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "Uk3e0dDm3JNN"
@@ -1888,6 +1910,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "O_mcQT7E3JNO"
@@ -1897,6 +1920,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "bqSlAobIUdSH"
@@ -2166,6 +2190,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "rbY6-66T3JNP"
@@ -2175,6 +2200,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "D10CkNxe3JNP"
@@ -2213,6 +2239,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "OFu_vWAR3JNQ"
@@ -2222,6 +2249,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "E2iclnGW3JNQ"
@@ -2260,6 +2288,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "G2hRKiLO3JNR"
@@ -2269,6 +2298,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "U6UnOK6x3JNR"
@@ -2746,6 +2776,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "FqG63lBy3JNS"
@@ -3007,6 +3038,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "oFOPr3aw3JNT"
@@ -3518,6 +3550,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "0-9RSOiu3JNU"
@@ -3529,6 +3562,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "FDJnZUPT3JNV"
@@ -3538,6 +3572,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "I1_2rKDF3JNV"
@@ -3548,6 +3583,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "OVeKdqG43JNW"
@@ -3853,6 +3889,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "2z9vh3Ql3JNW"
@@ -3862,6 +3899,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "XmCuiaIY3JNX"
@@ -3899,6 +3937,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "EqICMM5B3JNX"
@@ -3908,6 +3947,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "kQXuYcf33JNY"
@@ -3954,6 +3994,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "dKKLGlXJ3JNY"
@@ -3963,6 +4004,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "8KsjW1Ym3JNZ"
@@ -4024,6 +4066,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "rstG7lDT3JNa"
@@ -4033,6 +4076,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "AChgXp0D3JNa"
@@ -4347,6 +4391,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "YF24L70t3JNb"
@@ -4356,6 +4401,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "8K7M8Gdi3JNc"
@@ -4427,6 +4473,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "vuA4cWZg3JNd"
@@ -4436,6 +4483,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "FbW3mXcm3JNd"
@@ -4484,6 +4532,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "ensxcViX3JNe"
@@ -4493,6 +4542,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "i00ko6QP3JNe"
@@ -4541,6 +4591,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "Pt2qRJ-y3JNf"
@@ -4550,6 +4601,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "-6baBVjJ3JNf"
@@ -4590,6 +4642,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "BncZC1_M3JNg"
@@ -4602,6 +4655,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "GTRnYPOR3JNg"
@@ -4611,6 +4665,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "cwaSJz-A3JNg"
@@ -4622,6 +4677,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "XI5UNHJ93JNh"
@@ -5217,6 +5273,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "Y73zxbzhYf9u"
@@ -5362,6 +5419,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "fpUG4qDocNNM"
@@ -5522,6 +5580,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "_0lJvvBWYnm-"
@@ -5893,6 +5952,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "58EDfl8kLAUn"
